# iot-foundry-zephyr-endpoint

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  prj.conf  west.yml
.github/workflows/: zephyr-ci.yml
app/: CMakeLists.txt  run_mctp_tests.py
boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
mctp/: mctp_uart.c  mctp_uart.h
pldm-cmake/: CMakeLists.txt
src/: build_timestamp.c  fru.c  main.c  mctp_control.c  mctp_control.h  platform.h  platform_pdr.c  process_pldm.c  process_pldm.h
tests/: getpdr_follow.py  pldm_run_tests.json  run_mctp_tests.py  run_pldm_tests.py  send_getpdr_info.py
tests/mctp_posix_uart_stub/: CMakeLists.txt  prj.conf
tests/mctp_posix_uart_stub/include/: libmctp.h
tests/mctp_posix_uart_stub/src/: test_mctp_posix.c
tests/pldm_tb/: CMakeLists.txt  test_fru.c
tools/: dump_pdrs.py
